# ChameleonWM

./: .ccls  README.md  meson.build
include/: cursor.hpp  (+7 more)
src/: cursor.cpp  keyboard.cpp  main.cpp  meson.build  seat.cpp  server.cpp  xdgshell.cpp
src/.ccls-cache/@@home@nick@windowsmanager@src/: @usr@include@EGL@egl.h.blob  @usr@include@EGL@eglext.h.blob  @usr@include@EGL@eglextchromium.h.blob  @usr@include@EGL@eglmesaext.h.blob  @usr@include@EGL@eglplatform.h.blob  @usr@include@KHR@khrplatform.h.blob  @usr@include@X11@X.h.blob  @usr@include@X11@Xfuncproto.h.blob  @usr@include@X11@Xlib.h.blob  @usr@include@X11@Xosdefs.h.blob  @usr@include@X11@Xutil.h.blob  @usr@include@X11@keysym.h.blob  @usr@include@X11@keysymdef.h.blob  @usr@include@alloca.h.blob  @usr@include@asm-generic@errno-base.h.blob  @usr@include@asm-generic@errno.h.blob  @usr@include@asm@errno.h.blob  @usr@include@assert.h.blob  @usr@include@bits@byteswap.h.blob  @usr@include@bits@cpu-set.h.blob  @usr@include@bits@endian.h.blob  @usr@include@bits@errno.h.blob  @usr@include@bits@floatn-common.h.blob  @usr@include@bits@floatn.h.blob  @usr@include@bits@flt-eval-method.h.blob  @usr@include@bits@fp-fast.h.blob  @usr@include@bits@fp-logb.h.blob  @usr@include@bits@iscanonical.h.blob  @usr@include@bits@libc-header-start.h.blob  @usr@include@bits@libm-simd-decl-stubs.h.blob  @usr@include@bits@locale.h.blob  @usr@include@bits@math-vector.h.blob  @usr@include@bits@mathcalls-helper-functions.h.blob  @usr@include@bits@mathcalls-narrow.h.blob  @usr@include@bits@mathcalls.h.blob  @usr@include@bits@pthreadtypes-arch.h.blob  (+178 more)
(+366 files in other folders)
